--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-:body {
+:root {
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
   --accent-color: #2196f3;
@@ -10,6 +10,8 @@
 body {
   color: var(--primary-text-color);
   background-color: var(--container-bg-color);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .logo {
@@ -20,6 +22,10 @@ body {
 }
 
 /* navigation */
+
+span.logo-accent {
+  color: var(--accent-color);
+}
 
 .site-nav .link {
   color: var(--primary-text-color);
@@ -39,13 +45,25 @@ body {
   color: var(--accent-color);
 }
 
-/* hero */
+/* Main */
 
-.hero-title {
+.button {
+  color: var(--primary-text-color);
+  background: var(--button-bg-color);
+  cursor: pointer;
+}
+
+.button:hover {
+  color: var(--container-bg-color);
+  background: var(--accent-color);
+  border: none;
+}
+
+.footer-nav .link {
   color: var(--primary-text-color);
 }
 
-.button {
-  color: var(--container-bg-color);
-  background: var(--accent-color);
+.footer-nav .link:hover,
+.footer-nav .link:focus {
+  color: var(--accent-color);
 }
