--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,11 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+/* navigation */
+
 .logo {
   color: var(--primary-text-color);
 }
-.list {
-  list-style: none;
-}
-
-/* navigation */
 
 span.logo-accent {
   color: var(--accent-color);
@@ -36,16 +33,24 @@ span.logo-accent {
   color: var(--accent-color);
 }
 
+.list {
+  list-style: none;
+}
+
+.link {
+  color: var(--secondary-text-color);
+}
+
+.link.current {
+  color: var(--accent-color);
+}
+
 .auth-nav .link {
   color: var(--primary-text-color);
 }
 
 .auth-nav .link:hover,
 .auth-nav .link:focus {
-  color: var(--accent-color);
-}
-
-.link.current {
   color: var(--accent-color);
 }
 
