--- a/css/style.css
+++ b/css/style.css
@@ -5,90 +5,113 @@
   --container-bg-color: #ffffff;
   --container-border-color: #eeeeee;
   --button-bg-color: #f5f4fa;
+  --logo-main-color: #000000;
 }
 
 body {
-  color: var(--primary-text-color);
-  background-color: var(--container-bg-color);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", sans serif;
 }
 
-/* navigation */
-
+.header {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
 .logo {
-  color: var(--primary-text-color);
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #000000;
 }
-
 span.logo-accent {
   color: var(--accent-color);
 }
-
-.site-nav .link {
+.site-nav-link,
+.auth-nav-link {
   color: var(--primary-text-color);
+  font-style: normal;
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav-link:hover,
+.site-nav-link:focus {
   color: var(--accent-color);
 }
-
 .list {
   list-style: none;
+  color: var(--primary-text-color);
 }
-
 .link {
-  color: var(--secondary-text-color);
+  text-decoration: none;
 }
-
 .link.current {
   color: var(--accent-color);
 }
-
-.auth-nav .link {
-  color: var(--primary-text-color);
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--container-bg-color);
 }
-
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-  color: var(--accent-color);
-}
-
-/* Main */
-
-.button {
+.hero-button {
   color: var(--primary-text-color);
   background: var(--button-bg-color);
   cursor: pointer;
 }
-
-.button:hover {
+.hero-button:hover {
   color: var(--container-bg-color);
   background: var(--accent-color);
-  border: none;
 }
-
-/* portfolio cards */
-
-.link {
+.features-item-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+}
+.feature-description {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
-
-.link-title {
+.team {
+  color: var(--secondary-text-color);
+}
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-
-.link:hover,
-.link-title:hover {
-  color: var(--accent-color);
-}
-/* footer */
-
-.footer-nav .link {
+.team-list-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.189;
+  letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-
-.footer-nav .link:hover,
-.footer-nav .link:focus {
+.team-list-descr {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.189;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+.footer-nav-link:hover,
+.footer-nav-link:hover {
   color: var(--accent-color);
+}
+.footer-nav-link {
+  color: var(--primary-text-color);
+  font-style: normal;
 }
